src/test/resources/invalid/typecheck/IsNull_NotInteger.vas
class Main is
    this() is
        var a : Integer = isnull(null)
    end
end